kubernetes/platform/ingress-nginx/argocd.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
