kubernetes/platform/ingress-nginx/media.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: jellyfin-service.media-namespace.svc.cluster.local
  ports:
    - port: 8096
      targetPort: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: seerr-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: seerr-service.media-namespace.svc.cluster.local
  ports:
    - port: 5055
      targetPort: 5055
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: qbittorrent-service.media-namespace.svc.cluster.local
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: prowlarr-service.media-namespace.svc.cluster.local
  ports:
    - port: 9696
      targetPort: 9696
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: sonarr-service.media-namespace.svc.cluster.local
  ports:
    - port: 8989
      targetPort: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: radarr-service.media-namespace.svc.cluster.local
  ports:
    - port: 7878
      targetPort: 7878
---
apiVersion: v1
kind: Service
metadata:
  name: lazylibrarian-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: lazylibrarian-service.media-namespace.svc.cluster.local
  ports:
    - port: 5299
      targetPort: 5299
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: bazarr-service.media-namespace.svc.cluster.local
  ports:
    - port: 6767
      targetPort: 6767
