kubernetes/platform/ingress-nginx/portfolio.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: portfolio-service.portfolio-namespace.svc.cluster.local
  ports:
    - port: 3000
      targetPort: 3000
