kubernetes/platform/ingress-nginx/sonarqube.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: sonarqube-service.sonarqube-namespace.svc.cluster.local
  ports:
    - port: 9000
      targetPort: 9000
