kubernetes/platform/ingress-nginx/registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: registry-service.registry-namespace.svc.cluster.local
  ports:
    - name: http
      port: 5000
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: registry.andrerimes.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-external
                port:
                  number: 5000
