kubernetes/platform/ingress-nginx/resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
spec:
  ingressClassName: nginx
  rules:
  - host: bidnow.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bidnow-frontend-external
            port:
              number: 3000
  - host: bidnowback.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bidnow-backend-external
            port:
              number: 8081
  - host: bidnowback-ws.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bidnow-backend-external
            port:
              number: 3334
  - host: bidnow-recommendation.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bidnow-recommendation-external
            port:
              number: 8000
  - host: portfolio.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-external
            port:
              number: 3000
  - host: onabudget.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: onabudget-external
            port:
              number: 3000
  - host: argocd.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server-external
            port:
              number: 80
  - host: sonarqube.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarqube-external
            port:
              number: 9000
  - host: jellyfin.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin-external
            port:
              number: 8096
  - host: seerr.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seerr-external
            port:
              number: 5055

  - host: qbittorrent.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent-external
            port:
              number: 8080
  - host: prowlarr.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr-external
            port:
              number: 9696
  - host: sonarr.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr-external
            port:
              number: 8989
  - host: radarr.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr-external
            port:
              number: 7878
  - host: lazylibrarian.andrerimes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lazylibrarian-external
            port:
              number: 5299
